--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>JS TASK 1</title>
-</head>
-<body>
-    
-
-
-
+  </head>
+  <body>
+    <h1>gfdgfgdfgd</h1>
 
     <script src="js/index.js"></script>
-</body>
+  </body>
 </html>
