--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   </head>
   <body>
     <h1>gfdgfgdfgd</h1>
+    <h1>gfdgfgdfgd</h1>
+    <h1>gfdgfgdfgd</h1>
+    <h1>gfdgfgdfgd</h1>
 
     <script src="js/index.js"></script>
   </body>
